<resources>
    <string name="app_name">Cinema Now!</string>
    <string name="Login">Login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="reg">Register!</string>
    <string name="cinema_now">Cinema Now!</string>
    <string name="select_location">Select Location:</string>
    <string name="select_a_location">Select a Location:</string>
    <string name="title_activity_worcester_screen">WorcesterScreen</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_london_screen">LondonScreen</string>
    <string name="title_activity_coventry_screen">CoventryScreen</string>
    <string name="screen_1_showings">Screen 1 Showings:</string>
    <string name="screen_2_showings">Screen 2 Showings:</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="customer">Customer</string>
    <string name="admin">Admin</string>
    <string name="admin_pannel">Admin Pannel</string>
    <string name="view_users">View Users</string>
    <string name="delete_user">Delete User</string>
    <string name="edit_name">Edit Name</string>
    <string name="save">Save</string>
    <string name="name2">NAME</string>
    <string name="username2">USERNAME</string>
    <string name="password3">PASSWORD</string>
    <string name="re_enter_password2">RE-ENTER PASSWORD</string>
    <string name="password2">PASSWORD</string>
    <string name="username3">USERNAME</string>
    <string name="admin_panel">ADMIN PANEL</string>
    <string name="view_locations">View Locations</string>
</resources>
