<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vi5h.cinemanow.LoginActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/custombutton"
        android:drawableRight="@drawable/ic_send_black_24dp"
        android:fadingEdge="horizontal|vertical"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Login"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="200dp"
        android:drawableRight="@drawable/ic_cloud_upload_black_24dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custombutton"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/register"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:ems="10"
        android:drawableLeft="@drawable/ic_person_outline_black_24dp"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/username2"
        android:inputType="text"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/password2"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="cursive"
        android:text="@string/cinema_now"
        android:textColor="?attr/colorAccent"
        android:textSize="70sp"
        app:layout_constraintBottom_toTopOf="@+id/txtUsername"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Cinema Now!" />

</android.support.constraint.ConstraintLayout>
